# Astroworks

./: .gitignore  Astroworks.sln  Astroworks.vcxproj  Astroworks.vcxproj.filters  CMakeLists.txt  LICENSE  Makefile  README.md  Shaders.code-workspace  flatPS.spv  flatVS.spv  pbrtexturePS.spv  phongPS.spv  phongVS.spv  quadPS.spv  shadowMapCasterVS.spv
Data/Level/: Demo.toml  LargeLevel.toml  Level.toml  LevelBIG.toml  LevelDEMO.toml  LevelEFFECT.toml  LevelMISC.toml  LevelMISC.txt  LevelOIT.toml  LevelPAV.toml  LevelPBR.toml  LevelSKYBOX.txt  LevelTEXTURES.toml  Level_backup.toml  MinigameLevel.toml  NewLevel.toml  SimpleLevel.toml  __Level.toml
Data/Primitives/: Display.glb
Data/Primitives/Demo/: Hyper.glb  sphere2.glb  test-torus-fancy.glb
Data/StylizedCubeWorld/Misc/: SM_Arrow_01.glb  SM_Arrow_02.glb  SM_Coin_01.glb  SM_Coin_02.glb  SM_Gem_01.glb  SM_Goal_Check_Point_01.glb  SM_Jump_Pad_1m_01.glb  SM_Jump_Pad_2m_01.glb  SM_Key_01.glb  SM_Star_01.glb  SM_Step_Boost_01.glb  SM_Step_Boost_02.glb
Data/StylizedCubeWorld/Props/: SM_Crate_01.glb  SM_Crate_02.glb  SM_Fence_01_A.glb  SM_Fence_01_B.glb  SM_Fence_01_C_Pole.glb  SM_Fence_02_A.glb  SM_Fence_02_B.glb  SM_Fence_02_C.glb  SM_Fence_02_D.glb  SM_Ladder_1m_01_A.glb  SM_Ladder_2m_01_A.glb  SM_Ladder_3m_01_A.glb  SM_Plane_01.glb  SM_SignBoard_01_A.glb  SM_SignBoard_01_B.glb  SM_SignBoard_01_C.glb  SM_SignBoard_01_D.glb  SM_SignBoard_01_E.glb
Data/StylizedCubeWorld/TODOPlatforms/: SM_Platform_1m_01_A.glb  SM_Platform_1m_01_B.glb  SM_Platform_1m_01_C.glb  SM_Platform_1m_01_D.glb  SM_Platform_1m_02_A.glb  SM_Platform_1m_02_B.glb  SM_Platform_1m_02_C.glb  SM_Platform_1m_02_D.glb  SM_Platform_1m_03_A.glb  SM_Platform_1m_03_B.glb  SM_Platform_1m_03_C.glb  SM_Platform_1m_03_D.glb  SM_Platform_1m_04_A_Ramp.glb  SM_Platform_1m_04_B_Ramp.glb  SM_Platform_1m_Half_01_A.glb  SM_Platform_1m_Half_01_B.glb  SM_Platform_1m_Half_01_C.glb  SM_Platform_1m_Half_01_D.glb  SM_Platform_2m_01_A.glb  SM_Platform_2m_01_B.glb  SM_Platform_2m_01_C.glb  SM_Platform_2m_01_D.glb  SM_Platform_2m_03_B.glb  SM_Platform_2m_04_A_Ramp.glb  SM_Platform_2m_04_B_Ramp.glb  SM_Platform_2m_Half_01_A.glb  SM_Platform_2m_Half_01_B.glb  SM_Platform_2m_Half_01_C.glb  SM_Platform_2m_Half_01_D.glb  SM_Platform_4m_01_B.glb  SM_Platform_4m_02_B.glb  SM_Platform_4m_03_B_Ramp.glb
Data/StylizedCubeWorld/Vegetations/: SM_Flower_01_A.glb  SM_Flower_01_B.glb  SM_Flower_02_A.glb  SM_Flower_02_B.glb  SM_Grass_01_A.glb  SM_Grass_01_B.glb  SM_Grass_01_C.glb  SM_Grass_01_D.glb  SM_Log_01_A.glb  SM_Lumber_01_A.glb  SM_Lumber_01_B.glb  SM_Mushroom_01_A.glb  SM_Mushroom_01_B.glb  SM_Mushroom_01_C.glb  SM_Mushroom_01_D.glb  SM_Plant_01_A.glb  SM_Plant_01_B.glb  SM_Plant_01_C.glb  SM_Plant_01_D.glb
Shaders/: Blur.frag  BlurPS.spv  BlurVS.spv  DemoOIT.vert  DemoOITColor.frag  DemoOITColorPS.spv  DemoOITResult.frag  DemoOITResult.spv  DemoOITReveal.frag  DemoOITRevealPS.spv  DemoOITVS.spv  Luminance.frag  Luminance.vert  LuminancePS.spv  LuminanceVS.spv  OIT.vert  OITColor.frag  OITColorPBR.frag  OITColorPS.spv  OITResult.frag  OITResult.spv  OITReveal.frag  OITRevealPS.spv  OITVS.spv  PBR.vert  PBRIBL.frag  PBRIBLPS.spv  PBROnly.frag  PBROnlyPS.spv  billboard.vert  billboardVS.spv  compile.bat  computeParticle.comp  computeParticle.vert  computeParticleCS.spv  computeParticleVS.spv  dissolve.frag  dissolvePS.spv  fireball.frag  fireballPS.spv  (+40 more)
Source/Actor/: Actor.cpp  Actor.h  ActorTypes.h  Alien.cpp  Alien.h  Building.cpp  Building.h  Component.h  Marine.cpp  Marine.h  MinigameBull.cpp  MinigameBull.h  Movement.cpp  Movement.h  Tank.cpp  Tank.h  Unit.cpp  Unit.h  Worker.cpp  Worker.h
Source/Actor/Components/: Component.h  Movement.cpp  Movement.h  Transform.cpp  Transform.h
Source/Camera/: Camera.cpp  Camera.h  FreeCameraController.cpp  FreeCameraController.h  LockCameraController.cpp  LockCameraController.h
Source/Framework/: Framework.cpp  Framework.h  ResourceManager.cpp  ResourceManager.h  main.cpp
Source/Graphics/: Bitmap.cpp  Bitmap.h  GLTFStaticModel.cpp  GLTFStaticModel.h  Graphics.cpp  Graphics.h  Light.h  Macros.h  Particle.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Utilities.h
Source/Input/: Input.cpp  Input.h
Source/Misc/: HighResolutionTimer.h  Math.h
Source/Player/: Enemy.cpp  Enemy.h  Minigame.cpp  Minigame.h  Player.cpp  Player.h
Source/UI/: Button.cpp  Button.h  Counter.cpp  Counter.h  Image.cpp  Image.h  Overlay.h  OverlayComplete.cpp  OverlayComplete.h  OverlayEffectDemo.cpp  OverlayEffectDemo.h  OverlayGame.cpp  OverlayGame.h  OverlayScene.cpp  OverlayScene.h  OverlayTitle.cpp  OverlayTitle.h  RadioButton.cpp  RadioButton.h  Slider.cpp  Slider.h  Timer.cpp  Timer.h  UI.cpp  UI.h  UIUtilities.h  Widget.h
